--- a/BigShow/Base.lproj/Main.storyboard
+++ b/BigShow/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgv-Hj-cwy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="681" y="-510"/>
+            <point key="canvasLocation" x="681" y="-490"/>
         </scene>
         <!--BSNavC-->
         <scene sceneID="zPd-jq-BBW">
@@ -212,6 +212,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zak-sL-fBv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-191" y="808"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Ubc-8Y-XLC">
+            <objects>
+                <viewController storyboardIdentifier="edit_first" id="2qv-2m-da4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="piG-hf-lMT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VrT-oG-Riv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-196" y="1463"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qaK-pY-PSW">
+            <objects>
+                <viewController storyboardIdentifier="edit_second" id="c7o-12-GEb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ynm-tT-DkN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qg4-yU-oNF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="242" y="1469"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VKj-bv-0gN">
+            <objects>
+                <viewController storyboardIdentifier="edit_third" id="2H2-0r-61D" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gcF-WW-ok3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8KO-53-zqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="686" y="1469"/>
         </scene>
         <!--FindListC-->
         <scene sceneID="CRU-72-RhE">
