--- a/BigShow/Base.lproj/Main.storyboard
+++ b/BigShow/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xSI-cP-yg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-191" y="136.99999999999997"/>
+            <point key="canvasLocation" x="-191" y="136.99999999999994"/>
         </scene>
         <!--MenuC-->
         <scene sceneID="G5D-Vz-AgW">
@@ -222,12 +222,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="QIG-CD-nQu">
-                                <rect key="frame" x="0.0" y="56" width="320" height="512"/>
+                                <rect key="frame" x="0.0" y="121" width="320" height="447"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.76774727320000002" blue="0.075875679749999994" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="0tF-hk-a76">
-                                <rect key="frame" x="51" y="20" width="219" height="29"/>
+                                <rect key="frame" x="51" y="75" width="219" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="First"/>
@@ -239,7 +239,7 @@
                         </subviews>
                     </view>
                     <connections>
-                        <outlet property="containerView" destination="SLn-72-Job" id="eFp-74-2Q3"/>
+                        <outlet property="containerView" destination="QIG-CD-nQu" id="afU-Ly-xDr"/>
                         <outlet property="segmentController" destination="0tF-hk-a76" id="Dmt-vY-ljY"/>
                     </connections>
                 </viewController>
@@ -291,7 +291,7 @@
                                 <rect key="frame" x="16" y="20" width="288" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="在这里输入故事的情节..." id="c6t-NE-cIE">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="随便输入点什么" id="c6t-NE-cIE">
                                 <rect key="frame" x="16" y="264" width="288" height="129"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -518,7 +518,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZMv-eD-ufe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="681" y="825.99999999999989"/>
+            <point key="canvasLocation" x="681" y="825.99999999999977"/>
         </scene>
     </scenes>
     <resources>
