--- a/BigShow/Base.lproj/Main.storyboard
+++ b/BigShow/Base.lproj/Main.storyboard
@@ -348,12 +348,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head" id="EHr-bT-EsF">
-                                <rect key="frame" x="16" y="20" width="288" height="236"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head" id="EHr-bT-EsF">
+                                <rect key="frame" x="20" y="20" width="280" height="280"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="随便输入点什么" id="c6t-NE-cIE">
-                                <rect key="frame" x="16" y="264" width="288" height="129"/>
+                                <rect key="frame" x="20" y="319" width="280" height="98"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -362,6 +362,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.76774727322926051" blue="0.07587567974643894" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="contentImage" destination="EHr-bT-EsF" id="b80-rv-SeZ"/>
+                        <outlet property="contentText" destination="c6t-NE-cIE" id="F9Y-vI-Gn5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qg4-yU-oNF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
